# cod

./: .gitignore  AGENTS.md  check.py  pyproject.toml
.github/workflows/: block-review-base-merges.yml
docs/notes/: backlog.md  design.md  implementation-strategy.md  jj-github-stacked-review-design.md
src/jj_review/: __main__.py  bootstrap.py  cli.py  config.py  errors.py
src/jj_review/commands/: adopt.py  cleanup.py  review_state.py  submit.py
src/jj_review/github/: client.py
src/jj_review/jj/: __init__.py  client.py
src/jj_review/models/: __init__.py  cache.py  github.py  stack.py
src/jj_review/testing/: fake_github.py
tests/integration/: test_fake_github.py  test_jj_stack.py  test_submit_command.py
tests/unit/: test_bootstrap.py  test_cache.py  test_check.py  test_cleanup.py  test_cli.py  test_config.py  test_github_client.py  test_jj_client.py  test_review_state.py  test_submit.py
