[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "jj-review"
version = "0.1.0"
description = "JJ-native stacked GitHub review tooling"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28.1,<0.29",
  "pydantic>=2.11.0,<3",
]

[project.scripts]
jj-review = "jj_review.cli:main"

[dependency-groups]
dev = [
  "fastapi>=0.116.0,<0.117",
  "pytest>=8.4.0,<9",
  "ruff>=0.12.0,<0.13",
  "ty>=0.0.17,<0.1",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 98
src = ["src", "tests", "tools"]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.uv]
default-groups = ["dev"]
